plugins {
    id 'dev.architectury.loom' version '1.13-SNAPSHOT' apply false
    id 'architectury-plugin' version '3.4-SNAPSHOT'
    id 'com.github.johnrengelman.shadow' version '8.1.1' apply false
    id 'org.moddedmc.wiki.toolkit' version '0.2.7'
    id "me.modmuss50.mod-publish-plugin" version "0.8.0"
}

architectury {
    minecraft = project.minecraft_version
}

allprojects {
    group = rootProject.maven_group
    version = rootProject.mod_version
}

wiki {
    docs {
        oracle_index {
            // The path to the folder containing the documentation metadata file (sinytra-wiki.json)
            root = file('docs')
            exportedAssetNamespaces = ['oracle-index']
            wikiAccessToken = System.getenv('WIKI_TOKEN')
        }
    }
}

subprojects {
    apply plugin: 'dev.architectury.loom'
    apply plugin: 'architectury-plugin'
    apply plugin: 'maven-publish'
    apply plugin: 'me.modmuss50.mod-publish-plugin'

    base {
        // Set up a suffixed format for the mod jar names, e.g. `example-fabric`.
        archivesName = "$rootProject.archives_name-$project.name"
    }

    repositories {

        mavenCentral()

        maven { // FFAPI
            name = "Sinytra"
            url "https://maven.su5ed.dev/releases"
        }

        maven {
            name = 'CurseMaven'
            url "https://beta.cursemaven.com"
        }
    }

    dependencies {
        minecraft "net.minecraft:minecraft:$rootProject.minecraft_version"
        mappings loom.layered {
            it.mappings("net.fabricmc:yarn:$rootProject.yarn_mappings:v2")
            it.mappings("dev.architectury:yarn-mappings-patch-neoforge:$rootProject.yarn_mappings_patch_neoforge_version")
        }
    }

    java {
        // Loom will automatically attach sourcesJar to a RemapSourcesJar task and to the "build" task
        // if it is present.
        // If you remove this line, sources will not be generated.
        withSourcesJar()

        sourceCompatibility = JavaVersion.VERSION_21
        targetCompatibility = JavaVersion.VERSION_21
    }

    tasks.withType(JavaCompile).configureEach {
        it.options.release = 21
    }

    // Configure Maven publishing.
    publishing {
        publications {
            mavenJava(MavenPublication) {
                artifactId = base.archivesName.get()
                from components.java
            }
        }

        // See https://docs.gradle.org/current/userguide/publishing_maven.html for information on how to set up publishing.
        repositories {
            // Add repositories to publish to here.
            // Notice: This block does NOT have the same function as the block in the top level.
            // The repositories here will be used for publishing your artifact, not for
            // retrieving dependencies.
        }
    }
    
    if (project.name != 'common') {
        sourceSets {
            testmod {
                compileClasspath += sourceSets.main.compileClasspath
                runtimeClasspath += sourceSets.main.runtimeClasspath
        
                java.srcDir project(':common').file('src/testmod/java')
                resources.srcDir project(':common').file('src/testmod/resources')
            }
        }

        loom {
            runs {
                testmodClient {
                    client()
                    ideConfigGenerated true
                    name = "Testmod Client"
                    source sourceSets.main
                    source sourceSets.testmod
                }
            }
        }
    }
}
